Fix line spacing

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -168,3 +168,15 @@
   color: var(--mauve-11);
   margin-inline-end: 0.3em;
 }
+
+.prose sup,
+.prose sub {
+  font-family: var(--font-caption);
+  vertical-align: baseline;
+  position: relative;
+  top: -0.3em;
+}
+
+.prose sub {
+  top: 0.3em;
+}
